--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: pushoverr
 Type: Package
 Title: Send push notifications using Pushover
-Version: 0.1.1
-Date: 2014-03-28
+Version: 0.1.2
+Date: 2014-06-12
 Authors@R: c(person(family="Connelly", given="Brian", email="bdc@bconnelly.net",
                     role=c("aut", "cre")))
 Maintainer: Brian Connelly <bdc@bconnelly.net>
@@ -15,7 +15,7 @@ ByteCompile: no
 NeedsCompilation: no
 Depends: R (>= 3.0.0),
 Imports: httr, methods
-Packaged: 2014-03-29 18:19:01 UTC; bdc
+Packaged: 2014-06-12 20:43:53 UTC; brianc
 Author: Brian Connelly [aut, cre]
 Repository: CRAN
-Date/Publication: 2014-03-30 00:34:33
+Date/Publication: 2014-06-13 01:02:35
