--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(pushover_high)
 export(pushover_normal)
 export(pushover_priorities)
 export(pushover_quiet)
+export(pushover_silent)
 export(pushover_user.isset)
 export(set_pushover_app)
 export(set_pushover_user)
